<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_details_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bnw"
    tools:context=".view.activities.MovieDetailsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_movie_details"
        android:layout_width="360dp"
        android:layout_height="700dp"
        app:cardBackgroundColor="#A44200"
        app:cardCornerRadius="24dp"
        app:cardElevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movie_details_cv_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbl_movie_details_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/null_text"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_details_image" />

            <androidx.cardview.widget.CardView
                android:id="@+id/movie_details_title_code_cv"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:elevation="16dp"
                app:cardBackgroundColor="#D58936"
                app:cardCornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/movie_details_title_code_cv_constraint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lbl_movie_details_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:maxLines="2"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/movie_details_image"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_details_title_code_cv"
                app:srcCompat="@android:drawable/ic_menu_report_image" />

            <androidx.cardview.widget.CardView
                android:id="@+id/movie_details_cv_moredetails"
                android:layout_width="280dp"
                android:layout_height="380dp"
                android:elevation="16dp"
                app:cardBackgroundColor="#D58936"
                app:cardCornerRadius="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_movie_details_code">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/movie_details_cv_about_constraint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lbl_movie_details_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/null_text"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/lbl_movie_details_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="36dp"
                        android:text="TextView"
                        android:textColor="#ffffff"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/lbl_movie_details_language" />

                    <TextView
                        android:id="@+id/movie_details_language_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="36dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/language_title"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/movie_details_card_date_title" />

                    <TextView
                        android:id="@+id/lbl_movie_details_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="36dp"
                        android:text="TextView"
                        android:textColor="#ffffff"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/movie_details_rating_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="36dp"
                        android:layout_marginTop="32dp"
                        android:text="@string/rating_title"
                        android:textColor="#ffffff"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/movie_details_card_date_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="36dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/date_title"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/movie_details_rating_title" />

                    <TextView
                        android:id="@+id/lbl_movie_details_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="36dp"
                        android:inputType="date"
                        android:text="TextView"
                        android:textColor="#ffffff"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/lbl_movie_details_rating"
                        tools:ignore="TouchTargetSizeCheck" />

                    <TextView
                        android:id="@+id/lbl_movie_details_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="36dp"
                        android:text="TextView"
                        android:textColor="#ffffff"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/lbl_movie_details_date" />

                    <TextView
                        android:id="@+id/movie_details_cv_average_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="36dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/vote_average_title"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/movie_details_language_title" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/movie_details_cv_about_constraint_cv"
                        android:layout_width="240dp"
                        android:layout_height="220dp"
                        android:layout_marginBottom="16dp"
                        android:elevation="16dp"
                        app:cardBackgroundColor="#D8B187"
                        app:cardCornerRadius="25dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/movie_details_about_cv_constraint"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/movie_details_cv_about_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@string/about_title"
                                android:textColor="#ffffff"
                                android:textStyle="bold"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/lbl_movie_details_about"
                                android:layout_width="180dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="TextView"
                                android:textAlignment="center"
                                android:textColor="#ffffff"
                                android:textSize="12sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>